<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.walletkeep.walletkeep.ui.wallet.WalletActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/wallet_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/includecon"
        layout="@layout/wallet_content" />

    <FrameLayout
        android:id="@+id/wallet_activity_fab_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/wallet_activity_fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="4dp"
            fab:fab_addButtonColorNormal="@color/ui_general_elements"
            fab:fab_addButtonColorPressed="@color/ui_general_elements"
            fab:fab_addButtonPlusIconColor="@color/white"
            app:layout_anchor="@+id/includecon"
            app:layout_anchorGravity="right|bottom"
            fab:fab_labelStyle="@style/menu_labels_style"
            fab:fab_labelsPosition="left">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/wallet_activity_fab_addTransaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/transaction_consistent"
                fab:fab_colorPressed="@color/transaction_pressed_consistent"
                fab:fab_icon="@drawable/ic_tx"
                fab:fab_size="mini"
                fab:fab_title="@string/fab_transaction" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/wallet_activity_fab_addNakedWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/nakedwallet_consistent"
                fab:fab_colorPressed="@color/nakedwallet_pressed_consistent"
                fab:fab_icon="@drawable/ic_wl"
                fab:fab_size="mini"
                fab:fab_title="@string/fab_wallet_address" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/wallet_activity_fab_addExchangeWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/exchange_consistent"
                fab:fab_colorPressed="@color/exchange_pressed_consistent"
                fab:fab_icon="@drawable/ic_xc"
                fab:fab_size="mini"
                fab:fab_title="@string/fab_exchange_account" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
