<resources>
    <!-- - - - - - - - - - - General - - - - - - - - - - -->
    <string name="app_name">WalletKeep</string>
    <string name="title_activity_wallet">My wallets</string>
    <string name="title_activity_asset">My assets</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>

    <!--General - Api terminology-->
    <string name="key">Key</string>
    <string name="secret">Secret</string>
    <string name="passphrase">Passphrase</string>

    <!--General - Crypto terminology-->
    <string name="exchange">Exchange</string>
    <string name="address">Address</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="example_currency">ETH</string>
    <string name="example_amount_float">11.1</string>


    <!-- - - - - - - - - - - Assets - - - - - - - - - - -->
    <string name="asset">Asset</string>
    <string name="assets">Assets</string>

    <!--Asset activity-->
    <string name="label_market">Market:</string>
    <string name="label_you">You:</string>

    <!--Asset content listitem-->
    <string name="label_change">Change:</string>
    <string name="label_price">Price:</string>
    <string name="label_holdings">Holdings:</string>

    <string name="title_activity_assets">Assets</string>

    <!-- - - - - - - - - - - EditWallet - - - - - - - - - - -->
    <string name="confirmation_delete_wallet">Do you want to delete this wallet?</string>


    <!-- - - - - - - - - - - IntroSlider - - - - - - - - - - -->
    <string name="title_activity_introslider">Intro</string>

    <string name="Splash1">WalletKeep is the app that makes tracking your cryptocurrency portfolio truly easy and effortless.</string>
    <string name="Splash2">You enter your wallet address and exchange API View Key and WalletKeep will keep automatic track of all your balances, no more manual editing necessary.</string>
    <string name="Splash3">All the keys, addresses and work is done and stored only on your phone, so no one else has access to your portfolio</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <!-- - - - - - - - - - - Portfolio - - - - - - - - - - -->
    <string name="portfolios">Portfolios</string>
    <string name="portfolio">Portfolio</string>

    <string name="title_activity_portfolio">Portfolios</string>
    <string name="button_wallets">Wallets</string>

    <string name="confirmation_delete_portfolio">Do you want to delete this portfolio?</string>


    <!-- - - - - - - - - - - Wallet - - - - - - - - - - -->
    <string name="wallets">Wallets</string>
    <string name="wallet">Wallet</string>

    <!--Wallet activity-->
    <string name="fab_transaction">Transaction</string>
    <string name="fab_wallet_address">Wallet address</string>
    <string name="fab_exchange_account">Exchange account</string>
    <string name="tokens">Tokens:</string>
</resources>