<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.walletkeep.walletkeep.ui.portfolio.PortfolioActivity"
    android:padding="6dp"
    tools:showIn="@layout/portfolio_activity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/portfolio_content_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="70dp"
        android:scrollbars="vertical"
        android:theme="@style/recyclertest"/>
</android.support.constraint.ConstraintLayout>
