...
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/editwallet_activity_fragmentContainer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                app:layout_constraintVertical_bias="0.0"
                card_view:layout_constraintBottom_toTopOf="@+id/editWallet_activity_constraintLayout"
                card_view:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0">

                <Button
                    android:id="@+id/editWallet_activity_button_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="Confirm"
...
